# tensorrt-rs

./: .gitignore  Cargo.toml  README.md
tensorrt/: Cargo.toml  README.md
tensorrt-rs-sys/: Cargo.toml  README.md  build.rs
tensorrt-rs-sys/cxx/include/: logger.h  plugin.h  runtime.h
tensorrt-rs-sys/cxx/src/: logger.cpp  runtime.cpp
tensorrt-rs-sys/src/: lib.rs  logger.rs  plugin.rs  runtime.rs
tensorrt/examples/: clip.rs  pp_ocr.rs
tensorrt/src/: engine.rs  error.rs  lib.rs  tensor.rs
