[package]
name = "tensorrt-rs-sys"
version = "0.1.1"
authors = ["Ming Yang <ymviv@qq.com>"]
description = "Rust binding to NVIDIA TensorRT"
repository = "https://github.com/vivym/tensorrt-rs"
readme = "README.md"
keywords = ["tensorrt", "nvidia", "cuda", "ffi"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-rs = "0.1"
cxx = { version = "1", features = ["c++17", "c++14"] }

[build-dependencies]
cxx-build = "1"
