[package]
name = "tensorrt"
version = "0.0.1"
authors = ["Ming Yang <ymviv@qq.com>"]
description = "Rust wrapper for NVIDIA TensorRT"
repository = "https://github.com/vivym/tensorrt-rs"
readme = "README.md"
keywords = ["tensorrt", "nvidia", "cuda", "ffi"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-rs = "0.1"
tensorrt-rs-sys = { path = "../tensorrt-rs-sys" }
thiserror = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tch = "0.14.0"
